# linuxtrack

./: Configuration.md  Downloads.md  FAQ.md  Fedora_pkg_install.md  HallOfFame.md  ImprovementIdeas.md  InputDevices.md  LICENSE.md  LinuxtrackInterface.md  LinuxtrackSetup.md  MacOSX_compilation.md  Makefile.am  Makefile.in  NewBuild.md  ProjectHome.md  README  RandomIdeas.md  Readme.rtf  ReadmeFirst.md  TODO.md  Troubleshooting.md  Ubuntu_pkg_install.md  UniversalPkgInstall.md  VirtualMouse.md  WineGamesSupport.md  XPlanePluginSetupOld.md  XplanePluginSetup.md  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  coordinate_system.md  linux-track_internal_interfaces.dia  mac_build
branches/cam_view/: configure.ac
branches/cam_view/doc/: debug_flags.txt
branches/cam_view/mac_m4/: fake_pkg_conf.m4
branches/cam_view/maxima/: pose.maxima
branches/cam_view/octave/: bezier.m
branches/cam_view/src/: Makefile.am  axis.h  com_proc.c  hashing.c  image_process.c  liblt.sym  linuxtrack.c  linuxtrack.h  ltlib.c  ltlib.h  ltlib_int.c  ltlib_int.h  ltr_server.h  ltr_server1.1  ltr_server1.c  ltr_srv_master.cpp  ltr_srv_slave.c  pref.cpp  pref_bison.h  pref_flex.h  pref_global.c  runloop.c  sn4_model.h  utils.h  xlinuxtrack9.c
branches/consolidate/: Makefile.am  TODO  aclocal.m4  config.h.in  configure  configure.ac  mac_build
branches/consolidate/doc/: Makefile.in
branches/consolidate/src/: 51-TIR.rules  Makefile.in  cal.c  facetrack.h  fakeusb.c  image_process.c  ipc_utils.c  linuxtrack-wii.desktop  linuxtrack.c  linuxtrack.pc.in  linuxtrack.xpm  linuxtrack1.conf  ltlib.c  ltr_pipe.c  ltr_srv_comm.c  ltr_srv_slave.c  math_utils.h  pose.c  pose.h  pref_bison.cpp  pref_flex.h  pref_flex.lpp  runloop.c  tir4_driver.c  tir_hw.c  tir_img.c  tir_model.cpp  usb_ifc.h  webcam_driver.c  webcam_driver.h  wiimote_driver.c
branches/help_test/: Makefile.in  Readme.rtf  configure  configure.ac  mac_build
branches/help_test/src/: Makefile.am  Makefile.in  axis.c  drivers.sym  image_process.c  libusb_ifc.c  linuxtrack.conf  linuxtrack.desktop  linuxtrack.h  linuxtrack_pre.c  ltlib.h  ltr_pipe.1  ltr_pipe.c  ltr_server.c  math_utils.c  tir_hw.c  utils.c  utils.h  wc_driver_prefs.c
branches/michal/src/: .linuxtrack  Makefile.am  Makefile.in  axis.c  axis.h  cal.c  cal.h  dyn_load.c  dyn_load.h  image_process.c  image_process.h  ipc_utils.c  ipc_utils.h  liblt.sym  libusb_ifc.c  list.c  list.h  local_config.h.in  lt_client.c  lt_server.c  ltlib.c  ltlib.h  ltlib_client.c  ltlib_int.c  ltlib_int.h  ltlib_test.c  ltr_server.c  math_utils.c  math_utils.h  netcomm.c  netcomm.h  openusb_ifc.c  pathconfig.h.in  pose.c  pose.h  pref.c  pref.h  pref_bison.c  pref_bison.h  pref_bison.y  (+38 more)
branches/new_server/: AUTHORS  Makefile.am  Makefile.in  TODO  configure  configure.ac  mac_build
branches/new_server/python_prototype/: tir4_read_version_string.py
branches/new_server/src/: Makefile.am  Makefile.in  axis.c  axis.h  facetrack.h  image_process.c  ipc_utils.c  ipc_utils.h  libusb_ifc.c  linuxtrack1.conf  ltlib.c  ltlib.h  ltlib_int.c  ltlib_int.h  ltr_pipe.c  ltr_server1.c  (+31 more)
src/: .linuxtrack  Makefile.am  Makefile.in  axis.c  axis.h  cal.c  cal.h  com_proc.h  digest.c  digest.h  facetrack.cpp  fakeusb.c  game_data.c  hashing.c  image_process.c  image_process.h  ipc_utils.c  ipc_utils.h  joy.c  joy_driver.sym  joy_driver_prefs.c  joy_driver_prefs.h  libusb_ifc.c  linuxtrack-wii.desktop  linuxtrack.c  linuxtrack.conf  linuxtrack.h  linuxtrack_hello_world_adv.c  list.c  list.h  lt_client.c  lt_server.c  ltcomm.h  ltlib.c  ltlib.h  ltlib_client.c  ltlib_int.c  ltlib_test.c  ltr_pipe.1  ltr_pipe.c  (+79 more)
src/helper/: Makefile.am  Makefile.in
src/mac/: Makefile.am  Makefile.in  args.h  buffer.c  buffer.h  macwebcam.c  macwebcam_driver.c  processing.c  qt_camera.m  sg_camera.c  wiimote.m  wiimote_server.m
src/mickey/: Makefile.am  Makefile.in  calibration.ui  chsettings.ui  helpview.ui  hotkey.cpp  hotkey.ui  hotkey_setup_dlg.cpp  keyb.cpp  keyb.h  keyb_qxt.h  keyb_x11.cpp  main.cpp  mickey.cpp  mickey.h  mickey.pro.in  mickey.qhcp  mickey.qhp  mickey.ui  my_line_edit.cpp  my_line_edit.h  piper.c  piper.h  precomp_headers.h  pref.ui  transform.cpp  transform.h  uinput_ifc.c  uinput_ifc.h
src/osc_server_mac/: Makefile.am  Makefile.in  OscServer-Info.plist.in  OscServerAppDelegate.h  OscServerAppDelegate.m  osc_server.c  osc_server.h
src/qt_gui/: buffering.cpp  cap_edit.ui  cap_tweaking.ui  clip_edit.ui  clip_tweaking.ui  device_setup.cpp  device_setup.h  device_setup.ui  dlfirmware.cpp  downloading.cpp  extractor.cpp  extractor.h  extractor.ui  game_data.c  glwidget.cpp  guardian.cpp  hashing.cpp  hashing.h  help_view.cpp  help_view.h  help_viewer.cpp  help_viewer.h  joy_prefs.cpp  joy_prefs.h  joy_setup.ui  l_wc_setup.ui  l_wcft_setup.ui  log_view.cpp  log_view.h  ltr.ui  ltr_axis.cpp  ltr_dev_help.cpp  ltr_gui.cpp  ltr_gui.h  ltr_gui.pro.in  ltr_gui.qhcp  ltr_gui.qhp  ltr_gui.ui  ltr_gui_prefs.cpp  ltr_gui_prefs.h  (+67 more)
src/tests/: Makefile.am  Makefile.in  ltlib_test.c  test.c
src/wii_server/: wii_server.cpp  wii_server.h  wii_server.pro.in  wii_server.ui  wiimote.cpp
src/wine_bridge/: Makefile.am  Makefile.in  README  ltr_wine.nsi  ltr_wine.nsi.in  ltr_wine64.nsi  ltr_wine64.nsi.in
trunk/: Makefile.am  Makefile.in  Readme.rtf  TODO  aclocal.m4  config.h.in  configure  configure.ac  mac_build
trunk/doc/: Makefile.in
trunk/octave/: pose_test.m
trunk/python_prototype/: linux_tir4_prototype.py  tir4_read_version_string.py
trunk/src/: .linuxtrack  51-TIR.rules  Makefile.am  Makefile.in  axis.c  axis.h  cal.c  cal.h  com_proc.h  facetrack.cpp  fakeusb.c  game_data.c  image_process.c  image_process.h  ipc_utils.c  ipc_utils.h  liblt.sym  libusb_ifc.c  linuxtrack.c  linuxtrack.h  linuxtrack1.conf  linuxtrack_hello_world.c  linuxtrack_hello_world_adv.c  list.c  ltlib.c  ltlib.h  ltlib_int.c  ltlib_int.h  ltlib_test.c  ltr_pipe.1  ltr_pipe.c  ltr_recenter.c  ltr_server.c  ltr_server1.c  ltr_srv_comm.c  ltr_srv_comm.h  ltr_srv_master.cpp  ltr_srv_slave.c  macwii_driver.c  math_utils.c  (+48 more)
(+974 files in other folders)
